# qrcode-analytic-backend

./: .gitignore  Cargo.toml  README.md  justfile
src/: api.rs  creds.rs  data.rs  http.rs  main.rs
